LayoutTests:

Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=6216
          REGRESSION: getElementsByTagNameNS with empty namespace doesn't work

        * fast/dom/namespaces-1-expected.txt: Added.
        * fast/dom/namespaces-1.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=6216
          REGRESSION: getElementsByTagNameNS with empty namespace doesn't work

        * dom/Node.cpp:
        (WebCore::TagNodeList::TagNodeList): Changed parameter to PassRefPtr, tweaked formatting.
        (WebCore::TagNodeList::item): Tweaked formatting.
        (WebCore::TagNodeList::nodeMatches): Tweaked formatting.
        (WebCore::Node::setPrefix): Tweaked formatting.
        (WebCore::Node::getElementsByTagNameNS): Added special case to turn empty namespaces into
        null namespaces.



Canonical link: https://commits.webkit.org/17679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21167 268f45cc-cd09-0410-ab3c-d52691b4dbfc